@@ -1,3 +1,7 @@
+2009-12-19  Piotr Fusik  <fox@scene.pl>
+* asap.c, anylang.h: refactored ASAP_ParseDuration
+
+
 2009-12-18  Piotr Fusik  <fox@scene.pl>
 * acpu.c: fixed typo in a comment
 
